--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   github           : "twoongg"
   google_plus      :
   keybase          :
-  instagram        : "twoongg"
+  instagram        : "t.woongg"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
