--- a/_config.yml
+++ b/_config.yml
@@ -309,3 +309,12 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+    
+    # Analytics
+analytics:
+  provider               : "google-gtag" 
+                          # false (default), "google", "google-universal", "google-gtag", "custom"
+  google:
+    tracking_id          : "G-9BWYESK2L9"
+    anonymize_ip         : # true, false (default)
+
