tentative phd student

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "김태웅 (Taewoong Kim)"
   avatar           : "profile.png"
-  bio              : "Ph.D. student"
+  bio              : "Research Assistant, Ph. D. Student in ECE (tentative)"
   location         : "Seoul"
   employer         :
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
