--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,9 @@
 #  - title: "Blog Posts"
 #    url: /year-archive/
     
-#  - title: "CV"
-#    url: /cv/
+ - title: "CV"
+   url: /file/CV.pdf
+   class: "rightmost-link"
     
 #  - title: "Guide"
 #    url: /markdown/
